added friends connections features
