# app/controller/users.controller.js
@@ -8,7 +8,7 @@ dotenv.config();
 
 const register = async (_req, res) => {
   // #swagger.tags = ['Register User']
-  const { email, password } = _req.body;
+  const { email, password, name } = _req.body;
   try {
     const isUser = await User.findOne({ email });
     if (isUser) {
@@ -16,7 +16,7 @@ const register = async (_req, res) => {
         message: "User exists",
       });
     }
-    const user = new User({ email, password });
+    const user = new User({ email, password, name });
     await user.save();
     res.status(201).json({ message: "Registration Successful" });
   } catch (error) {
@@ -63,7 +63,7 @@ const login = async (_req, res) => {
         expiresIn: "24h",
       }
     );
-    res.json({ token });
+    res.json({ token, user });
   } catch (error) {
     console.log(error);
     res.status(500).json({
@@ -96,8 +96,8 @@ const updateProfile = async (_req, res) => {
 
     if (name) updateFields.name = name;
     if (password) {
-      updateFields.password = await bcrypt.hash(password,10)
-    };
+      updateFields.password = await bcrypt.hash(password, 10);
+    }
     if (bio) updateFields.bio = bio;
     if (image) updateFields.image = image;
 
@@ -125,9 +125,116 @@ const updateProfile = async (_req, res) => {
   }
 };
 
+const getUserByID = async (_req, res) => {
+  // #swagger.tags = ['Get All Users']
+  try {
+    const { params } = _req;
+    const users = await User.findById(params?.id)
+      .populate("friendsList")
+      .populate("requestList");
+    res.status(200).json({ message: "User List", data: users });
+  } catch (error) {
+    console.log(error);
+    res.status(500).json({
+      error: "Internal Server Error",
+    });
+  }
+};
+
+const getNonFriends = async (req, res) => {
+  const { user } = req;
+  try {
+    const userData = await User.findById(user?.userId)
+      .populate("friendsList")
+      .populate("requestList");
+    if (!userData) {
+      return res.status(404).json({ message: "User not found" });
+    }
+    const nonFriends = await User.find({
+      _id: {
+        $ne: user?.userId,
+        $nin: [...userData.friendsList, ...userData.requestList],
+      },
+      requestList: {
+        $ne: user?.userId,
+      },
+      friendsList: {
+        $ne: user?.userId,
+      },
+    });
+    res.json(nonFriends);
+  } catch (error) {
+    console.error(error);
+    res.status(500).json({ message: "Internal Server Error" });
+  }
+};
+
+const sendFriendRequest = async (req, res) => {
+  const { userId } = req.user;
+  const friendId = req.body.friendId;
+
+  try {
+    const user = await User.findById(friendId);
+    if (!user) {
+      return res.status(404).json({ message: "User not found" });
+    }
+    if (!user.requestList.includes(userId)) {
+      user.requestList.push(userId);
+      await user.save();
+
+      res.json({ message: "Friend request sent successfully" });
+    } else {
+      res.status(400).json({ message: "Friend request already sent" });
+    }
+  } catch (error) {
+    console.error(error);
+    res.status(500).json({ message: "Internal Server Error" });
+  }
+};
+
+const actionOnfriendRequest = async (req, res) => {
+  const { userId } = req.user;
+  const friendId = req.body.friendId;
+  const action = req.body.action;
+  try {
+    const user = await User.findById(friendId);
+    const currentUser = await User.findById(userId);
+    if (!user || !currentUser) {
+      return res.status(404).json({ message: "User not found" });
+    }
+    if (action === "accept") {
+      if (!currentUser.friendsList.includes(userId)) {
+        currentUser.friendsList.push(friendId);
+        currentUser.requestList = currentUser.requestList.filter(
+          (requestId) => requestId._id != friendId
+        );
+        user.friendsList.push(userId);
+        await user.save();
+        await currentUser.save();
+        res.json({ message: "Friend request accepted" });
+      } else {
+        res.status(400).json({ message: "Already have friends" });
+      }
+    } else if (action === "reject") {
+      currentUser.requestList = currentUser.requestList.filter((requestId) => {
+        return requestId._id != friendId;
+      });
+      await currentUser.save();
+      res.json({ message: "Friend request rejected" });
+    }
+  } catch (error) {
+    console.error(error);
+    res.status(500).json({ message: "Internal Server Error" });
+  }
+};
+
 module.exports = {
   register,
   getAllUsers,
   login,
   updateProfile,
+  getUserByID,
+  getNonFriends,
+  sendFriendRequest,
+  actionOnfriendRequest,
 };
