# app/routes/users.route.js
@@ -4,6 +4,10 @@ const {
   getAllUsers,
   login,
   updateProfile,
+  getUserByID,
+  getNonFriends,
+  sendFriendRequest,
+  actionOnfriendRequest,
 } = require("../controller/users.controller");
 const authMiddleware = require("../middleware/auth.middleware");
 const handleFileUpload = require("../middleware/uploadMiddleware");
@@ -13,8 +17,11 @@ const router = Router();
 router.post("/", register);
 
 router.get("/", authMiddleware, getAllUsers);
+router.get("/:id", authMiddleware, getUserByID);
 router.put("/:id", authMiddleware, handleFileUpload, updateProfile);
-
+router.get("/friends/find-friends",authMiddleware, getNonFriends);
+router.post("/friends/send-request",authMiddleware, sendFriendRequest);
+router.post("/friends/request-action",authMiddleware, actionOnfriendRequest);
 router.post("/auth", login);
 
 module.exports = router;
